--- a/client/src/components/Services/Services.module.scss
+++ b/client/src/components/Services/Services.module.scss
@@ -1,16 +1,17 @@
 @use '../../styles/variables' as *;
 
 .services {
-  padding: 120px 60px;
+  padding: 240px 60px 120px;
   background: $color-bg-alt;
   position: relative;
+  overflow: hidden;
 
   @media (max-width: $bp-tablet) {
-    padding: 80px 30px;
+    padding: 200px 30px 80px;
   }
 
   @media (max-width: $bp-mobile) {
-    padding: 60px 20px;
+    padding: 180px 20px 60px;
   }
 }
 
